--- a/.github/workflows/merge_epg.yaml
+++ b/.github/workflows/merge_epg.yaml
@@ -31,15 +31,10 @@ jobs:
           python scripts/merge_epg.py  # Pastikan path ke skrip benar
 
       # 5. Commit and push merged file
-      - name: Publish Release
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "*.merged_epg.xml,*.merged_epg.xml.gz"
-          allowUpdates: true
-          generateReleaseNotes: false
-          replacesArtifacts: true
-          removeArtifacts: true
-          prerelease: false
-          draft: false
-          makeLatest: true
-          tag: 1.0.0
+      - name: Commit and push changes
+        run: |
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git add merged_epg.xml
+          git commit -m "Update EPG with channel removal"
+          git push
